Add profiling in code